// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots 🚀 Cleanup Components/Tabs/Tabs Tabs 1`] = `
.c1 {
  text-transform: none;
  box-sizing: border-box;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
  min-height: 32px;
  min-width: 32px;
}

.c1.RcTab-selected {
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #066FAC;
}

.c0 {
  min-height: auto;
}

.c0 .RcTabs-indicator {
  background-color: #066FAC;
}

<div
  className="MuiPaper-root MuiPaper-elevation1"
>
  <div
    className="MuiTabs-root c0"
  >
    <div
      className="MuiTabs-scroller MuiTabs-fixed"
      onScroll={[Function]}
      style={
        Object {
          "marginBottom": null,
          "overflow": "hidden",
        }
      }
    >
      <div
        className="MuiTabs-flexContainer"
        onKeyDown={[Function]}
        role="tablist"
      >
        <button
          aria-selected={true}
          className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 Mui-selected RcTab-selected"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="tab"
          size="small"
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiTab-wrapper RcTab-wrapper"
          >
            Tab 1
          </span>
          <span
            className="PrivateTabIndicator-root-245 PrivateTabIndicator-colorPrimary-246 MuiTabs-indicator RcTabs-indicator"
            style={Object {}}
          />
        </button>
        <button
          aria-selected={false}
          className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="tab"
          size="small"
          tabIndex={-1}
          type="button"
        >
          <span
            className="MuiTab-wrapper RcTab-wrapper"
          >
            Tab 2
          </span>
        </button>
        <button
          aria-selected={false}
          className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="tab"
          size="small"
          tabIndex={-1}
          type="button"
        >
          <span
            className="MuiTab-wrapper RcTab-wrapper"
          >
            Tab 3
          </span>
        </button>
        <button
          aria-selected={false}
          className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="tab"
          size="small"
          tabIndex={-1}
          type="button"
        >
          <span
            className="MuiTab-wrapper RcTab-wrapper"
          >
            Tab 4
          </span>
        </button>
        <button
          aria-selected={false}
          className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="tab"
          size="small"
          tabIndex={-1}
          type="button"
        >
          <span
            className="MuiTab-wrapper RcTab-wrapper"
          >
            Tab 5
          </span>
        </button>
        <button
          aria-selected={false}
          className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 Mui-disabled Mui-disabled"
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="tab"
          size="small"
          tabIndex={-1}
          type="button"
        >
          <span
            className="MuiTab-wrapper RcTab-wrapper"
          >
            Tab 6
          </span>
        </button>
        <button
          aria-selected={false}
          className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="tab"
          size="small"
          tabIndex={-1}
          type="button"
        >
          <span
            className="MuiTab-wrapper RcTab-wrapper"
          >
            Tab 7
          </span>
        </button>
        <button
          aria-selected={false}
          className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="tab"
          size="small"
          tabIndex={-1}
          type="button"
        >
          <span
            className="MuiTab-wrapper RcTab-wrapper"
          >
            Tab 8
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots 🚀 Cleanup Components/Tabs/Tabs Tabs Custom Example 1`] = `
Array [
  .c0 {
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
}

<p
    className="MuiTypography-root c0 MuiTypography-gutterBottom"
    data-color="initial"
    data-variant="body1"
  >
    Through the resize window, observe the change of the badge on the more button. (variant="moreMenu")
  </p>,
  .c7 {
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 20px;
  color: icon;
}

.c3 .RcBadge-badge {
  color: #FFFFFF;
  background-color: #FF8800;
  height: 18px;
  min-width: 18px;
  padding: 0;
  position: unset;
  -webkit-transform: unset;
  -ms-transform: unset;
  transform: unset;
}

.c3 .RcBadge-badge.RcBadge-invisible {
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c4 .RcBadge-badge {
  color: #FFFFFF;
  background-color: #FF8800;
  height: 18px;
  min-width: 18px;
  position: unset;
  -webkit-transform: unset;
  -ms-transform: unset;
  transform: unset;
}

.c4 .RcBadge-badge.RcBadge-invisible {
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c2 {
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
}

.c1 {
  text-transform: none;
  box-sizing: border-box;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
  min-height: 32px;
  min-width: 32px;
}

.c1.RcTab-selected {
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #066FAC;
}

.c1 .RcTab-wrapper {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1.RcTab-labelIcon .RcTab-wrapper > *:first-child {
  margin-bottom: unset;
  margin-right: 6px;
}

.c5 {
  position: absolute;
  bottom: 0;
  top: 0;
  right: 0;
}

.c0 {
  min-height: auto;
}

.c0 .RcTabs-indicator {
  background-color: #066FAC;
}

<div
    className="MuiPaper-root MuiPaper-elevation1"
  >
    <div
      className="MuiTabs-root c0"
      size="small"
    >
      <div
        className="MuiTabs-scroller MuiTabs-fixed"
        onScroll={[Function]}
        style={
          Object {
            "marginBottom": null,
            "overflow": "hidden",
          }
        }
      >
        <div
          className="MuiTabs-flexContainer"
          onKeyDown={[Function]}
          role="tablist"
        >
          <button
            aria-selected={true}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 Mui-selected RcTab-selected"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              <span
                className="MuiTypography-root c2"
                data-color="initial"
                data-variant="body1"
              >
                Tab 0
              </span>
              <span
                className="MuiBadge-root c3"
              >
                <span
                  className="MuiBadge-badge RcBadge-badge MuiBadge-anchorOriginTopRightRectangle"
                >
                  7
                </span>
              </span>
            </span>
            <span
              className="PrivateTabIndicator-root-253 PrivateTabIndicator-colorPrimary-254 MuiTabs-indicator RcTabs-indicator"
              style={Object {}}
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              <span
                className="MuiTypography-root c2"
                data-color="initial"
                data-variant="body1"
              >
                Tab 1
              </span>
              <span
                className="MuiBadge-root c3"
              >
                <span
                  className="MuiBadge-badge RcBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-invisible RcBadge-invisible"
                >
                  0
                </span>
              </span>
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              <span
                className="MuiTypography-root c2"
                data-color="initial"
                data-variant="body1"
              >
                Tab 2
              </span>
              <span
                className="MuiBadge-root c4"
              >
                <span
                  className="MuiBadge-badge RcBadge-badge MuiBadge-anchorOriginTopRightRectangle"
                >
                  54
                </span>
              </span>
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              <span
                className="MuiTypography-root c2"
                data-color="initial"
                data-variant="body1"
              >
                Tab 3
              </span>
              <span
                className="MuiBadge-root c4"
              >
                <span
                  className="MuiBadge-badge RcBadge-badge MuiBadge-anchorOriginTopRightRectangle"
                >
                  72
                </span>
              </span>
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              <span
                className="MuiTypography-root c2"
                data-color="initial"
                data-variant="body1"
              >
                Tab 4
              </span>
              <span
                className="MuiBadge-root c3"
              >
                <span
                  className="MuiBadge-badge RcBadge-badge MuiBadge-anchorOriginTopRightRectangle"
                >
                  2
                </span>
              </span>
            </span>
          </button>
          <button
            aria-controls="rc-juno-id-0"
            aria-haspopup="true"
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 c5"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              <span
                className="c6 more_horiz icon"
              >
                <svg
                  className="c7"
                  viewBox="0 0 32 32"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9 16a2.5 2.5 0 11-5 0 2.5 2.5 0 015 0zm9.5 0a2.5 2.5 0 11-5 0 2.5 2.5 0 015 0zm9.5 0a2.5 2.5 0 11-5 0 2.5 2.5 0 015 0z"
                  />
                </svg>
                
              </span>
              <span
                className="MuiBadge-root c3"
              >
                <span
                  className="MuiBadge-badge RcBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-invisible RcBadge-invisible"
                >
                  0
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots 🚀 Cleanup Components/Tabs/Tabs Tabs Example 1`] = `
Array [
  .c0 {
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
}

<p
    className="MuiTypography-root c0 MuiTypography-gutterBottom"
    data-color="neutral.f06"
    data-variant="body2"
  >
    variant = "standard"
  </p>,
  .c1 {
  text-transform: none;
  box-sizing: border-box;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
  min-height: 32px;
  min-width: 32px;
}

.c1.RcTab-selected {
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #066FAC;
}

.c0 {
  min-height: auto;
}

.c0 .RcTabs-indicator {
  background-color: #066FAC;
}

<div
    className="MuiPaper-root MuiPaper-elevation1"
  >
    <div
      className="MuiTabs-root c0"
    >
      <div
        className="MuiTabs-scroller MuiTabs-fixed"
        onScroll={[Function]}
        style={
          Object {
            "marginBottom": null,
            "overflow": "hidden",
          }
        }
      >
        <div
          className="MuiTabs-flexContainer"
          onKeyDown={[Function]}
          role="tablist"
        >
          <button
            aria-selected={true}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 Mui-selected RcTab-selected"
            data-test-automation-id="tab-test-0"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 0
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-1"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 1
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-2"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 2
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-3"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 3
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-4"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 4
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 Mui-disabled Mui-disabled"
            data-test-automation-id="tab-test-5"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 5
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-6"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 6
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-7"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 77777777
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-8"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 8
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-9"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 9
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
        <span
          className="PrivateTabIndicator-root-249 PrivateTabIndicator-colorPrimary-250 MuiTabs-indicator RcTabs-indicator"
          style={
            Object {
              "left": 0,
              "width": 0,
            }
          }
        />
      </div>
    </div>
  </div>,
  <br />,
  .c0 {
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
}

<p
    className="MuiTypography-root c0 MuiTypography-gutterBottom"
    data-color="neutral.f06"
    data-variant="body2"
  >
    variant = "scrollable"
  </p>,
  .c1 {
  text-transform: none;
  box-sizing: border-box;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
  min-height: 32px;
  min-width: 32px;
}

.c1.RcTab-selected {
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #066FAC;
}

.c0 {
  min-height: auto;
}

.c0 .RcTabs-indicator {
  background-color: #066FAC;
}

<div
    className="MuiPaper-root MuiPaper-elevation1"
  >
    <div
      className="MuiTabs-root c0"
    >
      <div
        className="MuiTabs-scrollable"
        style={
          Object {
            "height": 99,
            "overflow": "scroll",
            "position": "absolute",
            "top": -9999,
            "width": 99,
          }
        }
      />
      <div
        className="MuiTabs-scroller MuiTabs-scrollable"
        onScroll={[Function]}
        style={
          Object {
            "marginBottom": -0,
            "overflow": null,
          }
        }
      >
        <div
          className="MuiTabs-flexContainer"
          onKeyDown={[Function]}
          role="tablist"
        >
          <button
            aria-selected={true}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 Mui-selected RcTab-selected"
            data-test-automation-id="tab-test-0"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 0
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-1"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 1
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-2"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 2
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-3"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 3
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-4"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 4
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 Mui-disabled Mui-disabled"
            data-test-automation-id="tab-test-5"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 5
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-6"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 6
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-7"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 77777777
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-8"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 8
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-9"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 9
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
        <span
          className="PrivateTabIndicator-root-249 PrivateTabIndicator-colorPrimary-250 MuiTabs-indicator RcTabs-indicator"
          style={
            Object {
              "left": 0,
              "width": 0,
            }
          }
        />
      </div>
    </div>
  </div>,
  <br />,
  .c0 {
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
}

<p
    className="MuiTypography-root c0 MuiTypography-gutterBottom"
    data-color="neutral.f06"
    data-variant="body2"
  >
    variant = "fullWidth"
  </p>,
  .c1 {
  text-transform: none;
  box-sizing: border-box;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
  min-height: 32px;
  min-width: 32px;
}

.c1.RcTab-selected {
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #066FAC;
}

.c0 {
  min-height: auto;
}

.c0 .RcTabs-indicator {
  background-color: #066FAC;
}

<div
    className="MuiPaper-root MuiPaper-elevation1"
  >
    <div
      className="MuiTabs-root c0"
    >
      <div
        className="MuiTabs-scroller MuiTabs-fixed"
        onScroll={[Function]}
        style={
          Object {
            "marginBottom": null,
            "overflow": "hidden",
          }
        }
      >
        <div
          className="MuiTabs-flexContainer"
          onKeyDown={[Function]}
          role="tablist"
        >
          <button
            aria-selected={true}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 Mui-selected RcTab-selected MuiTab-fullWidth"
            data-test-automation-id="tab-test-0"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 0
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 MuiTab-fullWidth"
            data-test-automation-id="tab-test-1"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 1
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 MuiTab-fullWidth"
            data-test-automation-id="tab-test-2"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 2
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 MuiTab-fullWidth"
            data-test-automation-id="tab-test-3"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 3
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 MuiTab-fullWidth"
            data-test-automation-id="tab-test-4"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 4
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 Mui-disabled MuiTab-fullWidth Mui-disabled"
            data-test-automation-id="tab-test-5"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 5
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 MuiTab-fullWidth"
            data-test-automation-id="tab-test-6"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 6
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 MuiTab-fullWidth"
            data-test-automation-id="tab-test-7"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 77777777
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 MuiTab-fullWidth"
            data-test-automation-id="tab-test-8"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 8
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 MuiTab-fullWidth"
            data-test-automation-id="tab-test-9"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 9
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
        <span
          className="PrivateTabIndicator-root-249 PrivateTabIndicator-colorPrimary-250 MuiTabs-indicator RcTabs-indicator"
          style={
            Object {
              "left": 0,
              "width": 0,
            }
          }
        />
      </div>
    </div>
  </div>,
  <br />,
  .c0 {
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
}

<p
    className="MuiTypography-root c0 MuiTypography-gutterBottom"
    data-color="neutral.f06"
    data-variant="body2"
  >
    variant = "moreMenu"
  </p>,
  .c4 {
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 20px;
  color: #666666;
}

.c1 {
  text-transform: none;
  box-sizing: border-box;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
  min-height: 32px;
  min-width: 32px;
}

.c1.RcTab-selected {
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #066FAC;
}

.c2 {
  position: absolute;
  bottom: 0;
  top: 0;
  right: 0;
}

.c0 {
  min-height: auto;
}

.c0 .RcTabs-indicator {
  background-color: #066FAC;
}

<div
    className="MuiPaper-root MuiPaper-elevation1"
  >
    <div
      className="MuiTabs-root c0"
      size="small"
    >
      <div
        className="MuiTabs-scroller MuiTabs-fixed"
        onScroll={[Function]}
        style={
          Object {
            "marginBottom": null,
            "overflow": "hidden",
          }
        }
      >
        <div
          className="MuiTabs-flexContainer"
          onKeyDown={[Function]}
          role="tablist"
        >
          <button
            aria-selected={true}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 Mui-selected RcTab-selected"
            data-test-automation-id="tab-test-0"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 0
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-1"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 1
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-2"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 2
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-3"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 3
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-4"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 4
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 Mui-disabled Mui-disabled"
            data-test-automation-id="tab-test-5"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 5
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-6"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 6
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-7"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 77777777
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-8"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 8
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-9"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 9
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-controls="custom-menu-id"
            aria-haspopup="true"
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 c2"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              <span
                aria-describedby={null}
                className="c3 more_horiz icon"
                data-test-automation-id="tooltip-automation-id"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="tooltip"
              >
                <svg
                  className="c4"
                  viewBox="0 0 32 32"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9 16a2.5 2.5 0 11-5 0 2.5 2.5 0 015 0zm9.5 0a2.5 2.5 0 11-5 0 2.5 2.5 0 015 0zm9.5 0a2.5 2.5 0 11-5 0 2.5 2.5 0 015 0z"
                  />
                </svg>
                
              </span>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
        <span
          className="PrivateTabIndicator-root-249 PrivateTabIndicator-colorPrimary-250 MuiTabs-indicator RcTabs-indicator"
          style={
            Object {
              "left": 0,
              "width": 0,
            }
          }
        />
      </div>
    </div>
  </div>,
  <br />,
]
`;
